# wakfu-builder-assistant

./: .dockerignore  .gitignore  ACTION_ID_CORRECTIONS.md  ADVANCED_FEATURES.md  APLICAR_FIXES_INSTRUCCIONES.md  ARCHITECTURE.md  BUILD_PERSISTENCE_SYSTEM.md  CHEST_CORRECTIONS_APPLIED.md  COMPLETE_SUMMARY.md  COMPLETION_SUMMARY.md  CONTEXTUAL_STATS_FIX_COMPLETE.md  CORAZAS_REVIEW_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FILES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  DISCREPANCIAS_CORAZAS.md  DODGE_BERSERK_FIX_GUIDE.md  Dockerfile  FEATURES_COMPLETE.md  FINAL_GUIDE.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY_v1.7.md  FIXES_2025-11-05.md  GUARDAR_ESTE_PROMPT.txt  IGNORED_ITEMS_FEATURE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_GFX_ID.md  INDICE_DOCUMENTACION_FIXES.md  ITEM_METADATA_GUIDE.md  KNOWN_LIMITATIONS.md  LEVEL_OPTIMIZATION.md  METADATA_INTEGRATION_COMPLETE.md  MIGRATION_GUIDE_GFX_ID.md  MULTIPLE_ACQUISITION_METHODS_GUIDE.md  Makefile  OPTIMIZATION_SUMMARY.md  (+40 more)
api/: .gitignore  Dockerfile  Dockerfile.prod  pyproject.toml
api/app/: __init__.py  main.py
api/app/core/: config.py
api/app/data/: class_presets.py
api/app/db/: database.py  models.py
api/app/routers/: damage_calculator.py  gamedata.py  item_metadata.py  items.py  presets.py  solver.py
api/app/services/: damage_calculator.py  difficulty.py  element_resolver.py  solver.py  (+1 more)
api/migrations/: README.md  add_blocks_second_weapon.sql  add_gfx_id.sql
api/tests/: test_damage_calculator.py  test_difficulty.py  test_solver.py
(+135 files in other folders)
